<resources>
    <string name="app_name">Orientation</string>
    <string name="action_settings">Settings</string>
    <string name="lname">Last name</string>
    <string name="phone">Tel</string>
    <string name="addr">address</string>
    <string name="mail">Email</string>
    <string name="birthday">Birthday</string>
    <string name="address">Address</string>
    <string name="fname">Name</string>
    <string name="btn_send">Send</string>
    <string name="btn_reset">Reset</string>
</resources>
