<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">



    <TextView
        android:id="@+id/tw_fname"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:text="@string/fname"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/et_fname"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/tw_lname"
        android:layout_alignParentEnd="true">
        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/tw_lname"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:text="@string/lname"
        android:layout_below="@+id/tw_fname"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/et_lname"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:layout_below="@+id/et_fname"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">/>
    </EditText>

    <TextView
        android:id="@+id/tw_phone"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:text="@string/phone"
        android:layout_below="@+id/tw_address"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/et_tel"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:layout_below="@+id/et_address"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">/>
    </EditText>

    <TextView
        android:id="@+id/tw_birthday"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:text="@string/birthday"
        android:layout_below="@+id/tw_lname"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/et_birthday"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:layout_below="@+id/et_lname"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">/>
    </EditText>

    <TextView
        android:id="@+id/tw_address"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:text="@string/address"
        android:layout_below="@+id/tw_birthday"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/et_address"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:layout_below="@+id/et_birthday"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">/>
    </EditText>

    <TextView
        android:id="@+id/tw_email"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:text="@string/mail"
        android:layout_below="@+id/tw_phone"
        android:layout_alignRight="@+id/tw_fname"
        android:layout_alignEnd="@+id/tw_fname" />


    <EditText
        android:id="@+id/et_mail"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:layout_below="@+id/et_tel"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">/>
    </EditText>

    <Button

        android:id="@+id/btn_send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_send"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/et_mail"
        android:layout_alignEnd="@+id/et_mail" />

    <Button
        android:id="@+id/btn_reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_reset"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Large Text"
        android:id="@+id/textView"
        android:layout_below="@+id/tw_email"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="66dp" />

</RelativeLayout>